fixed scrolling on mobile for industries

--- a/components/slider.scss
+++ b/components/slider.scss
@@ -5,6 +5,7 @@
     overflow-x: hidden;
     position: relative;
     z-index: 2;
+    -webkit-overflow-scrolling: touch;
 
     &--is-always-row{
       display: flex;
